<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ScroingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/team1_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/sa1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center"
                android:text="0"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="click"
                android:text="@string/btn3_label"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btn2a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="click"
                android:text="@string/btn2_label"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btn1a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="click"
                android:text="@string/btn1_label"
                android:textAllCaps="true" />

        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/design_default_color_primary_dark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/team2_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/sb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center"
                android:text="0"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="click"
                android:text="@string/btn3_label"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btn2b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="click"
                android:text="@string/btn2_label"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btn1b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="click"
                android:text="@string/btn1_label"
                android:textAllCaps="true" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/reset_label"
        android:layout_marginTop="210dp"
        android:textAllCaps="true"/>

</LinearLayout>